Updating base files

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,40 @@
       "Epoch 1/10\n",
       "147643/147643 [==============================] - 2927s - loss: 0.3300 - binary_accuracy: 0.9269  \n",
       "Epoch 2/10\n",
-      " 91525/147643 [=================>............] - ETA: 1091s - loss: 0.2598 - binary_accuracy: 0.9279"
+      "147643/147643 [==============================] - 2872s - loss: 0.2624 - binary_accuracy: 0.9269  \n",
+      "Epoch 3/10\n",
+      "147643/147643 [==============================] - 2876s - loss: 0.2622 - binary_accuracy: 0.9269  \n",
+      "Epoch 4/10\n",
+      "147643/147643 [==============================] - 2877s - loss: 0.2621 - binary_accuracy: 0.9269  \n",
+      "Epoch 5/10\n",
+      "147643/147643 [==============================] - 2880s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
+      "Epoch 6/10\n",
+      "147643/147643 [==============================] - 2883s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
+      "Epoch 7/10\n",
+      "147643/147643 [==============================] - 2886s - loss: 0.2621 - binary_accuracy: 0.9269  \n",
+      "Epoch 8/10\n",
+      "147643/147643 [==============================] - 2886s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
+      "Epoch 9/10\n",
+      "147643/147643 [==============================] - 2886s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
+      "Epoch 10/10\n",
+      "147643/147643 [==============================] - 2878s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
+      "72672/72721 [============================>.] - ETA: 0s\n",
+      " Loss on test set is: [0.26148442671892841, 0.92695369975660402]\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.93      1.00      0.96     67409\n",
+      "       True       0.00      0.00      0.00      5312\n",
+      "\n",
+      "avg / total       0.86      0.93      0.89     72721\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -602,13 +635,13 @@
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "\n",
     "global_random_state = 42\n",
-    "rus = RandomUnderSampler(random_state=global_random_state)\n",
+    "#rus = RandomUnderSampler(random_state=global_random_state)\n",
     "X_resampled, y_resampled = rus.fit_sample(fingerprints, activities)\n",
     "\n",
-    "print(sorted(Counter(y_resampled).items()))\n",
+    "#print(sorted(Counter(y_resampled).items()))\n",
     "\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, \n",
+    "#X_train, X_test, y_train, y_test = train_test_split(X_resampled, \n",
     "                                                    y_resampled, test_size=0.33, random_state=global_random_state)\n",
     "\n",
     "#print(X_train.head())\n",
@@ -617,7 +650,7 @@
     "print(len(X_train))\n",
     "print(len(y_train))\n",
     "\n",
-    "classifier = DecisionTreeClassifier(random_state=global_random_state)\n",
+    "classifier = RandomForestClassifier(n_estimators=100, random_state=global_random_state, n_jobs=-1)\n",
     "\n",
     "# Note: This may take 5-10 minutes to run\n",
     "classifier.fit(X_train,y_train)\n",
