--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -146,11 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully loaded 220364 compounds.\n",
+      "Sample ID: 6603008\n",
+      "Sample fingerprint vector: [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      "Was it bioactive? Assay returned: False\n",
+      "[(False, 204253), (True, 16111)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's try again. We duplicate imports in case starting from this cell\n",
     "\n",
@@ -162,6 +172,7 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import train_test_split\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
     "from collections import Counter\n",
     "\n",
     "smiles_list = None\n",
@@ -185,13 +196,21 @@
     "\n",
     "# Correctly balance the classes\n",
     "\n",
-    "\n",
-    "rus = RandomUnderSampler(random_state=global_random_state)\n",
-    "X_resampled, y_resampled = rus.fit_sample(fingerprints, activities)\n",
-    "\n",
+    "undersample = False\n",
+    "oversample = False\n",
+    "if undersample :\n",
+    "    rus = RandomUnderSampler(random_state=global_random_state)\n",
+    "    X_resampled, y_resampled = rus.fit_sample(fingerprints, activities)\n",
+    "elif oversample :\n",
+    "    ros = RandomOverSampler(random_state=global_random_state)\n",
+    "    X_resampled, y_resampled = rus.fit_sample(fingerprints, activities) \n",
+    "else :\n",
+    "    X_resampled = fingerprints\n",
+    "    y_resampled = activities\n",
+    "    \n",
     "print(sorted(Counter(y_resampled).items()))\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.33, random_state=global_random_state)"
+    "X_train, X_test, y_train, y_test = train_test_split(np.array(X_resampled), np.array(y_resampled, dtype=int), test_size=0.33, random_state=global_random_state)"
    ]
   },
   {
@@ -347,8 +366,7 @@
     "from keras import metrics\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Dense(2048, input_dim=2048, activation='relu'))\n",
-    "model.add(Dense(1024, activation='relu'))\n",
+    "model.add(Dense(1024, input_dim=2048, activation='relu'))\n",
     "model.add(Dense(512, activation='relu'))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
@@ -491,19 +509,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "y_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -511,45 +516,10 @@
      "output_type": "stream",
      "text": [
       "147643\n",
-      "4096\n",
-      "False\n",
-      "Epoch 1/10\n",
-      "147643/147643 [==============================] - 2927s - loss: 0.3300 - binary_accuracy: 0.9269  \n",
-      "Epoch 2/10\n",
-      "147643/147643 [==============================] - 2872s - loss: 0.2624 - binary_accuracy: 0.9269  \n",
-      "Epoch 3/10\n",
-      "147643/147643 [==============================] - 2876s - loss: 0.2622 - binary_accuracy: 0.9269  \n",
-      "Epoch 4/10\n",
-      "147643/147643 [==============================] - 2877s - loss: 0.2621 - binary_accuracy: 0.9269  \n",
-      "Epoch 5/10\n",
-      "147643/147643 [==============================] - 2880s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
-      "Epoch 6/10\n",
-      "147643/147643 [==============================] - 2883s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
-      "Epoch 7/10\n",
-      "147643/147643 [==============================] - 2886s - loss: 0.2621 - binary_accuracy: 0.9269  \n",
-      "Epoch 8/10\n",
-      "147643/147643 [==============================] - 2886s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
-      "Epoch 9/10\n",
-      "147643/147643 [==============================] - 2886s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
-      "Epoch 10/10\n",
-      "147643/147643 [==============================] - 2878s - loss: 0.2620 - binary_accuracy: 0.9269  \n",
-      "72672/72721 [============================>.] - ETA: 0s\n",
-      " Loss on test set is: [0.26148442671892841, 0.92695369975660402]\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "      False       0.93      1.00      0.96     67409\n",
-      "       True       0.00      0.00      0.00      5312\n",
-      "\n",
-      "avg / total       0.86      0.93      0.89     72721\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
+      "2048\n",
+      "0\n",
+      "Epoch 1/5\n",
+      "  2702/147643 [..............................] - ETA: 579s - loss: 1.8638 - binary_accuracy: 0.6029"
      ]
     }
    ],
@@ -571,7 +541,7 @@
     "\n",
     "#activity_outcomes = pd.Series(activities).astype(bool)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(np.array(fingerprints), np.array(activities), test_size=0.33, random_state=global_random_state)\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(np.array(fingerprints), np.array(activities, dtype=int), test_size=0.33, random_state=global_random_state)\n",
     "\n",
     "\n",
     "print(len(X_train))\n",
@@ -581,17 +551,15 @@
     "#y_train_binary = np.array(y_train,dtype=np.bool)\n",
     "#y_test_binary = np.array(y_test,dtype=np.bool)\n",
     "\n",
-    "class_weight = class_weight.compute_class_weight('balanced',np.unique(y_train),y_train)\n",
+    "class_weights = { 0: 1., 1: 12.67785}\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Dense(4096, input_dim=4096, activation='relu'))\n",
-    "model.add(Dense(1024, activation='relu'))\n",
+    "model.add(Dense(1024, input_dim=2048, activation='relu'))\n",
     "model.add(Dense(512, activation='relu'))\n",
     "model.add(Dense(256, activation='relu'))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
-    "\n",
-    "model.fit(X_train, y_train, epochs=10, batch_size=1, class_weight=class_weight)\n",
+    "model.fit(X_train, y_train, epochs=5, batch_size=1, class_weight=class_weights)\n",
     "\n",
     "score = model.evaluate(X_test, y_test)\n",
     "\n",
@@ -601,7 +569,32 @@
     "model.save(\"pcba_1030_large_nn.h5\")\n",
     "\n",
     "y_pred = model.predict_on_batch(X_test)\n",
-    "y_pred_binarized = y_pred[0:] > .5\n",
+    "y_pred_binarized = y_pred[0:] > .6\n",
+    "print(classification_report(y_test, y_pred_binarized))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.96      0.83      0.89     67409\n",
+      "          1       0.20      0.54      0.30      5312\n",
+      "\n",
+      "avg / total       0.90      0.81      0.85     72721\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = model.predict_on_batch(X_test)\n",
+    "y_pred_binarized = y_pred[0:] > .4\n",
     "print(classification_report(y_test, y_pred_binarized))"
    ]
   },
@@ -632,11 +625,11 @@
    "source": [
     "# Correctly balance the classes\n",
     "import sklearn\n",
-    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
     "\n",
     "global_random_state = 42\n",
     "#rus = RandomUnderSampler(random_state=global_random_state)\n",
-    "X_resampled, y_resampled = rus.fit_sample(fingerprints, activities)\n",
+    "X_resampled, y_resampled = ros.fit_sample(fingerprints, activities)\n",
     "\n",
     "#print(sorted(Counter(y_resampled).items()))\n",
     "\n",
