Further install script updates

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -26,10 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -49,11 +47,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed index: 0\n",
+      "Processed index: 10000\n",
+      "Processed index: 20000\n",
+      "Processed index: 30000\n",
+      "Processed index: 40000\n",
+      "Processed index: 50000\n",
+      "Processed index: 60000\n",
+      "Processed index: 70000\n",
+      "Processed index: 80000\n",
+      "Processed index: 90000\n",
+      "Processed index: 100000\n",
+      "Processed index: 110000\n",
+      "Processed index: 120000\n",
+      "Processed index: 130000\n",
+      "Processed index: 140000\n",
+      "Processed index: 150000\n",
+      "Processed index: 160000\n",
+      "Processed index: 170000\n",
+      "Processed index: 180000\n",
+      "Processed index: 190000\n",
+      "Processed index: 200000\n",
+      "Processed index: 210000\n",
+      "Molecule failed featurization\n",
+      "218052\n",
+      "PUBCHEM_RESULT_TAG                                                        217907\n",
+      "PUBCHEM_SID                                                           5.0108e+07\n",
+      "PUBCHEM_CID                                                              3246048\n",
+      "PUBCHEM_ACTIVITY_OUTCOME                                                  Active\n",
+      "PUBCHEM_ACTIVITY_SCORE                                                        45\n",
+      "PUBCHEM_ACTIVITY_URL                                                         NaN\n",
+      "PUBCHEM_ASSAYDATA_COMMENT                                                    NaN\n",
+      "Phenotype                                                              Inhibitor\n",
+      "Potency                                                                   3.5481\n",
+      "Efficacy                                                                 103.952\n",
+      "Analysis Comment                                                             NaN\n",
+      "Curve_Description                                   Partial curve; high efficacy\n",
+      "Fit_LogAC50                                                                -5.45\n",
+      "Fit_HillSlope                                                             1.2221\n",
+      "Fit_R2                                                                    0.9873\n",
+      "Fit_InfiniteActivity                                                    -100.864\n",
+      "Fit_ZeroActivity                                                          3.0879\n",
+      "Fit_CurveClass                                                              -2.1\n",
+      "Excluded_Points                                                    0 0 0 0 0 0 0\n",
+      "Max_Response                                                              -80.45\n",
+      "Max_Read1                                                                 6.8466\n",
+      "Activity at 0.0000657143 uM                                                  NaN\n",
+      "Activity at 0.0001462857 uM                                                  NaN\n",
+      "Activity at 0.0003274286 uM                                                  NaN\n",
+      "Activity at 0.0007314286 uM                                                4.923\n",
+      "Activity at 0.00164 uM                                                       NaN\n",
+      "Activity at 0.00372 uM                                                     7.792\n",
+      "Activity at 0.00536 uM                                                       NaN\n",
+      "Activity at 0.00873 uM                                                       NaN\n",
+      "Activity at 0.021 uM                                                      -4.114\n",
+      "Activity at 0.031 uM                                                         NaN\n",
+      "Activity at 0.063 uM                                                         NaN\n",
+      "Activity at 0.112 uM                                                        3.35\n",
+      "Activity at 0.178 uM                                                         NaN\n",
+      "Activity at 0.440 uM                                                      -5.572\n",
+      "Activity at 0.633 uM                                                         NaN\n",
+      "Activity at 1.025 uM                                                         NaN\n",
+      "Activity at 2.477 uM                                                      -35.57\n",
+      "Activity at 3.655 uM                                                         NaN\n",
+      "Activity at 6.194 uM                                                         NaN\n",
+      "Activity at 13.48 uM                                                      -80.45\n",
+      "Activity at 20.88 uM                                                         NaN\n",
+      "Activity at 50.43 uM                                                         NaN\n",
+      "Activity at 75.27 uM                                                         NaN\n",
+      "Activity at 119.8 uM                                                         NaN\n",
+      "Activity at 186.5 uM                                                         NaN\n",
+      "Compound QC                                                          QC'd by NCI\n",
+      "Smiles                         C1=CC=NC=C1.C1=C[C-](C=CC1[Sb-](Cl)(Cl)(Cl)(Cl...\n",
+      "Name: 218052, dtype: object\n",
+      "Processed index: 220000\n",
+      "Processed all, pickling\n"
+     ]
+    }
+   ],
    "source": [
     "# Load assay info. Note: This CSV was obtained from PubChem bioassay aka PCBA, via searching for AID 1030 \n",
     "# and downloading the datatable\n",
@@ -69,17 +147,27 @@
     "# Cleanup the compound ID column\n",
     "full_df[\"PUBCHEM_CID\"] = full_df[\"PUBCHEM_CID\"].astype(int)\n",
     "\n",
+    "# Delete CID 3246048, which fails featurization\n",
+    "\n",
+    "full_df = full_df[\"PUBCHEM_CID\" != 3246048]\n",
+    "\n",
     "compound_ids = list()\n",
     "smiles_list = list()\n",
     "fingerprints = list()\n",
     "activities = list()\n",
+    "\n",
+    "#fingerprint_df = \n",
     "\n",
     "for index, row in full_df.iterrows() :\n",
     "    cid = row[\"PUBCHEM_CID\"]\n",
     "    smiles_string = row[\"Smiles\"]\n",
     "    mol = Chem.MolFromSmiles(smiles_string)\n",
     "    is_active = row[\"PUBCHEM_ACTIVITY_OUTCOME\"] == \"Active\"\n",
-    "    if mol is not None: \n",
+    "    if mol is None:\n",
+    "        print(\"Molecule failed featurization\")\n",
+    "        print(index)\n",
+    "        print(row)\n",
+    "    else: \n",
     "        fingerprint = rdMolDescriptors.GetMorganFingerprintAsBitVect(mol,2,nBits=2048,useChirality=False,\n",
     "                                                                     useBondTypes=False,useFeatures=False)\n",
     "        \n",
@@ -108,9 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Here we see that a naive approach (without balancing data) yields a poor F1-score\n",
@@ -119,26 +205,28 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.cross_validation import cross_val_predict\n",
     "\n",
+    "active_pct = 0.073125471\n",
+    "inactive_pct = 1 - active_pct\n",
+    "\n",
+    "# We set the inactive to have the weight of the active, and vice versa, to account for imbalance\n",
+    "class_weights = { 0: active_pct, 1: inactive_pct }\n",
     "\n",
     "# Create a train/test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(fingerprints, activities, test_size=0.33, random_state=global_random_state)\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=3)\n",
     "\n",
     "classifier = DecisionTreeClassifier(random_state=global_random_state)\n",
     "\n",
-    "# Note: This may take 5-10 minutes to run\n",
-    "classifier.fit(X_train,y_train)\n",
+    "scores = cross_val_score(classifier, fingerprints, activities, cv=5)\n",
     "\n",
-    "# We have the 'ground truth' of which of the held-out 33% of the data was really bioactive. But can we predict it?\n",
-    "# If we could, we could predict which compounds might be bioactive without having to actually test them in a lab\n",
+    "y_pred = cross_val_predict(classifier, fingerprints, activities, cv=5)\n",
     "\n",
-    "score = classifier.score(X_test,y_test)\n",
+    "print(classification_report(activities, y_pred))\n",
     "\n",
-    "print(\"Classifier obtained a mean accuracy score of: {0}\".format(score))\n",
-    "\n",
-    "y_pred = classifier.predict(X_test)\n",
-    "\n",
-    "print(classification_report(y_test, y_pred))\n",
     "\n",
     "# Note: Unfortunately it's not directly comparable to ROC_AUC calculated in MoleculeNet at: https://arxiv.org/pdf/1703.00564.pdf \n",
     "# This is because MoleculeNet looks at a different metric (roc_auc) and also a different task (multiclass prediction across 128 bioassays simultaneously vs binary classification here)"
@@ -543,6 +631,11 @@
     "\n",
     "#X_train, X_test, y_train, y_test = train_test_split(np.array(fingerprints), np.array(activities, dtype=int), test_size=0.33, random_state=global_random_state)\n",
     "\n",
+    "active_pct = 0.073125471\n",
+    "inactive_pct = 1 - active_pct\n",
+    "\n",
+    "# We set the inactive to have the weight of the active, and vice versa, to account for imbalance\n",
+    "class_weights = { 0: active_pct, 1: inactive_pct }\n",
     "\n",
     "print(len(X_train))\n",
     "print(len(X_train[0]))\n",
@@ -551,15 +644,75 @@
     "#y_train_binary = np.array(y_train,dtype=np.bool)\n",
     "#y_test_binary = np.array(y_test,dtype=np.bool)\n",
     "\n",
-    "class_weights = { 0: 1., 1: 12.67785}\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Dense(1024, input_dim=2048, activation='relu'))\n",
+    "model.add(Dense(2048, input_dim=2048, activation='relu'))\n",
     "model.add(Dense(512, activation='relu'))\n",
     "model.add(Dense(256, activation='relu'))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
-    "model.fit(X_train, y_train, epochs=5, batch_size=1, class_weight=class_weights)\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=1, class_weight=class_weights)\n",
+    "\n",
+    "score = model.evaluate(X_test, y_test)\n",
+    "\n",
+    "print(\"\\n Loss on test set is: {0}\".format(score))\n",
+    "\n",
+    "# let's save it for future experimentation\n",
+    "model.save(\"pcba_1030_large_nn.h5\")\n",
+    "\n",
+    "y_pred = model.predict_on_batch(X_test)\n",
+    "y_pred_binarized = y_pred[0:] > .6\n",
+    "print(classification_report(y_test, y_pred_binarized))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# What about a larger network size, and setting class weights?\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras import metrics\n",
+    "import pickle\n",
+    "from sklearn.utils import class_weight\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "\n",
+    "\n",
+    "global_random_state = 42\n",
+    "\n",
+    "#activity_outcomes = pd.Series(activities).astype(bool)\n",
+    "\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(np.array(fingerprints), np.array(activities, dtype=int), test_size=0.33, random_state=global_random_state)\n",
+    "\n",
+    "active_pct = 0.073125471\n",
+    "inactive_pct = 1 - active_pct\n",
+    "\n",
+    "# We set the inactive to have the weight of the active, and vice versa, to account for imbalance\n",
+    "class_weights = { 0: active_pct, 1: inactive_pct }\n",
+    "\n",
+    "print(len(X_train))\n",
+    "print(len(X_train[0]))\n",
+    "print(y_train[0])\n",
+    "\n",
+    "#y_train_binary = np.array(y_train,dtype=np.bool)\n",
+    "#y_test_binary = np.array(y_test,dtype=np.bool)\n",
+    "\n",
+    "\n",
+    "model = Sequential()\n",
+    "model.add(Dense(2048, input_dim=2048, activation='relu'))\n",
+    "model.add(Dense(512, activation='relu'))\n",
+    "model.add(Dense(256, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=1, class_weight=class_weights)\n",
     "\n",
     "score = model.evaluate(X_test, y_test)\n",
     "\n",
