--- a/pubchem_regression.ipynb
+++ b/pubchem_regression.ipynb
@@ -21,12 +21,12 @@
    },
    "outputs": [],
    "source": [
-    "# Exploratory data analysis and visualization"
+    "# Exploratory data analysis (regression)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -38,12 +38,13 @@
     "from rdkit import Chem, DataStructs\n",
     "from rdkit.Chem import AllChem, rdMolDescriptors\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "global_random_state = 42\n",
-    "k_fold_splits = 5\n",
+    "k_fold_splits = 2\n",
     "\n",
     "np.random.seed(global_random_state)\n",
     "\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +90,21 @@
       "Molecule failed featurization\n",
       "218052\n",
       "Processed index: 220000\n",
+      "Processed all, sampling\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/imblearn/base.py:100: UserWarning: Only one class detected, something will get wrong\n",
+      "  warnings.warn('Only one class detected, something will get wrong')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Processed all, pickling\n"
      ]
     }
@@ -148,20 +164,27 @@
     "        print(\"Processed index: {0}\".format(index))\n",
     "\n",
     "# Convert activities to np array of ints\n",
+    "\n",
     "activities = np.array(activities,dtype=int)\n",
-    "        \n",
+    "fingerprints = np.array(fingerprints)\n",
+    "\n",
+    "print(\"Processed all, sampling\")\n",
+    "\n",
+    "rus = RandomUnderSampler(random_state=global_random_state)\n",
+    "X, y = rus.fit_sample(fingerprints, activities)\n",
+    "\n",
     "print(\"Processed all, pickling\")\n",
     "\n",
-    "compound_ids_and_features = (compound_ids, smiles_list, fingerprints, activities)\n",
+    "#compound_ids_and_features = (compound_ids, smiles_list, fingerprints, activities)\n",
     "\n",
     "# Pickle the data to save time in the future\n",
-    "with open('data.scores.pickle', 'wb') as f:\n",
-    "    pickle.dump(compound_ids_and_features, f, pickle.HIGHEST_PROTOCOL)"
+    "with open('data.regression.undersampled.pickle', 'wb') as f:\n",
+    "    pickle.dump((X,y), f, pickle.HIGHEST_PROTOCOL)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,15 +192,16 @@
      "output_type": "stream",
      "text": [
       "Successfully loaded 220364 compounds.\n",
-      "Sample ID: 6603008\n",
-      "Sample fingerprint vector: [ 0.  0.  0. ...,  0.  0.  0.]\n",
-      "Was it bioactive? Assay returned: 0\n"
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      False       1.00      1.00      1.00    220364\n",
+      "\n",
+      "avg / total       1.00      1.00      1.00    220364\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Here we see that a naive approach (without balancing data) yields a poor F1-score\n",
-    "\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -191,6 +215,7 @@
     "from rdkit import Chem, DataStructs\n",
     "from rdkit.Chem import AllChem, rdMolDescriptors\n",
     "from collections import Counter\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
     "smiles_list = None\n",
     "compound_ids = None\n",
@@ -199,29 +224,27 @@
     "\n",
     "global_random_state = 42\n",
     "\n",
-    "with open('data.pickle', 'rb') as f:\n",
+    "with open('data.regression.undersampled.pickle', 'rb') as f:\n",
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
-    "    (compound_ids, smiles_list, fingerprints, activities) = pickle.load(f)\n",
+    "    (X, y) = pickle.load(f)\n",
     "\n",
     "# Print the number of compounds loaded\n",
-    "print(\"Successfully loaded {0} compounds.\".format(len(compound_ids)))\n",
-    "\n",
-    "# Show an example of the raw data\n",
-    "print(\"Sample ID: {0}\".format(compound_ids[0]))\n",
-    "print(\"Sample fingerprint vector: {0}\".format(fingerprints[0]))\n",
-    "print(\"Was it bioactive? Assay returned: {0}\".format(activities[0]))\n",
+    "print(\"Successfully loaded {0} compounds.\".format(len(X)))\n",
     "\n",
     "\n",
     "# Create a train/test split\n",
     "\n",
-    "classifier = DecisionTreeClassifier(random_state=global_random_state, class_weight='balanced')\n",
+    "classifier = DecisionTreeRegressor(random_state=global_random_state)\n",
     "\n",
-    "scores = cross_val_score(classifier, fingerprints, activities, cv=k_fold_splits)\n",
+    "scores = cross_val_score(classifier, X, y, cv=k_fold_splits)\n",
     "\n",
-    "y_pred = cross_val_predict(classifier, fingerprints, activities, cv=k_fold_splits)\n",
+    "y_pred = cross_val_predict(classifier, X, y, cv=k_fold_splits)\n",
     "\n",
-    "print(classification_report(activities, y_pred))\n",
+    "y_pred_binary = y_pred[0:] > .4\n",
     "\n",
+    "y_binarized = y[0:] > .4\n",
+    "\n",
+    "print(classification_report(y_binarized, y_pred_binary))\n",
     "\n",
     "# Note: Unfortunately it's not directly comparable to ROC_AUC calculated in MoleculeNet at: https://arxiv.org/pdf/1703.00564.pdf \n",
     "# This is because MoleculeNet looks at a different metric (roc_auc) and also a different task (multiclass prediction across 128 bioassays simultaneously vs binary classification here)"
