Adding cuda requirements setups script

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -26,8 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -164,8 +166,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Here we see that a naive approach (without balancing data) yields a poor F1-score\n",
@@ -193,30 +197,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computed roc_auc score of: 0.6276067527308838\n",
+      "Computed roc_auc score of: 0.6342477656405163\n",
       "             precision    recall  f1-score   support\n",
       "\n",
       "          0       0.63      0.63      0.63      8056\n",
-      "          1       0.63      0.62      0.63      8056\n",
+      "          1       0.63      0.64      0.63      8056\n",
       "\n",
       "avg / total       0.63      0.63      0.63     16112\n",
       "\n",
-      "Computed roc_auc score of: 0.6235878336436995\n",
+      "Computed roc_auc score of: 0.6350093109869646\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.63      0.62      0.62      8055\n",
-      "          1       0.62      0.63      0.63      8055\n",
+      "          0       0.64      0.62      0.63      8055\n",
+      "          1       0.63      0.65      0.64      8055\n",
       "\n",
-      "avg / total       0.62      0.62      0.62     16110\n",
+      "avg / total       0.64      0.64      0.63     16110\n",
       "\n",
-      "Average roc_auc score is: 0.6255972931872917\n"
+      "Average roc_auc score is: 0.6346285383137404\n"
      ]
     }
    ],
@@ -251,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -266,15 +270,15 @@
       "\n",
       "avg / total       0.69      0.69      0.69     16112\n",
       "\n",
-      "Computed roc_auc score of: 0.6929857231533209\n",
+      "Computed roc_auc score of: 0.6955307262569832\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.70      0.67      0.69      8055\n",
+      "          0       0.70      0.68      0.69      8055\n",
       "          1       0.69      0.71      0.70      8055\n",
       "\n",
-      "avg / total       0.69      0.69      0.69     16110\n",
+      "avg / total       0.70      0.70      0.70     16110\n",
       "\n",
-      "Average roc_auc score is: 0.6914531396302851\n"
+      "Average roc_auc score is: 0.6927256411821163\n"
      ]
     }
    ],
@@ -311,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +357,7 @@
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
     "\n",
-    "    classifier = RandomForestClassifier(n_estimators=1000, random_state=global_random_state, n_jobs=-1)\n",
+    "    classifier = RandomForestClassifier(n_estimators=100, random_state=global_random_state, n_jobs=-1)\n",
     "    classifier.fit(X_train,y_train)\n",
     "    y_pred = classifier.predict(X_test)\n",
     "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
@@ -396,6 +400,15 @@
     "print(estim.score(X_test, y_test))\n",
     "print(estim.best_model())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
