--- a/pubchem_dnn.ipynb
+++ b/pubchem_dnn.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,8 @@
     "import pandas as pd\n",
     "from rdkit import Chem, DataStructs\n",
     "from rdkit.Chem import AllChem, rdMolDescriptors\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import roc_auc_score, classification_report\n",
+    "\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -57,22 +58,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensorflow\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
-    "print(keras.backend.backend())\n",
-    "\n",
-    "print(len(X))\n",
-    "print(len(y))"
+    "print(keras.backend.backend())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "16110/16110 [==============================] - 59s - loss: 0.6359 - acc: 0.6373    \n",
+      "Epoch 2/3\n",
+      "16110/16110 [==============================] - 59s - loss: 0.5633 - acc: 0.7094    \n",
+      "Epoch 3/3\n",
+      "16110/16110 [==============================] - 59s - loss: 0.5135 - acc: 0.7497    \n",
+      "16082/16112 [============================>.] - ETA: 0sComputed roc_auc score of: 0.6763282025819265\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.67      0.70      0.68      8056\n",
+      "          1       0.69      0.65      0.67      8056\n",
+      "\n",
+      "avg / total       0.68      0.68      0.68     16112\n",
+      "\n",
+      "When using regressor as an active/inactive classifier, f1 score of: 0.6676015042386384\n",
+      "Epoch 1/3\n",
+      "16112/16112 [==============================] - 59s - loss: 0.6361 - acc: 0.6375    \n",
+      "Epoch 2/3\n",
+      "16112/16112 [==============================] - 59s - loss: 0.5643 - acc: 0.7074    \n",
+      "Epoch 3/3\n",
+      "16112/16112 [==============================] - 60s - loss: 0.5103 - acc: 0.7511    \n",
+      "16043/16110 [============================>.] - ETA: 0sComputed roc_auc score of: 0.6773432650527623\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.68      0.67      0.67      8055\n",
+      "          1       0.67      0.69      0.68      8055\n",
+      "\n",
+      "avg / total       0.68      0.68      0.68     16110\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-76d1f210369c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     50\u001b[0m     \u001b[0my_pred_binarized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m.4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0my_test_binarized\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m.4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m     \u001b[0mf1_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred_binarized\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_test_binarized\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"When using regressor as an active/inactive classifier, f1 score of: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0mf1_score_avg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1_score_avg\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "# What about a deep neural network?\n",
     "# Sample code from: https://machinelearningmastery.com/tutorial-first-neural-network-python-keras/\n",
@@ -83,6 +136,8 @@
     "from keras.wrappers.scikit_learn import KerasClassifier\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import roc_auc_score, f1_score\n",
+    "\n",
     "import pickle\n",
     "\n",
     "k_fold_splits = 2\n",
@@ -100,55 +155,134 @@
     "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[\"accuracy\"])\n",
     "    return model\n",
     "\n",
-    "model = KerasClassifier(build_fn=create_model, epochs=3, batch_size=1, verbose=1)\n",
-    "results = cross_val_score(model, X, y, cv=k_fold_splits)\n",
-    "print(results.mean())\n",
+    "skf = StratifiedKFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
     "\n",
-    "y_pred = cross_val_predict(classifier, X, y, cv=k_fold_splits)\n",
+    "roc_auc_avg = 0\n",
+    "f1_score_avg = 0\n",
     "\n",
-    "print(classification_report(y, y_pred))"
+    "for train_index, test_index in skf.split(X,y) :\n",
+    "\n",
+    "    X_train = X[train_index]\n",
+    "    X_test = X[test_index]\n",
+    "    y_train = y[train_index]\n",
+    "    y_test = y[test_index]\n",
+    "\n",
+    "    classifier = KerasClassifier(build_fn=create_model, epochs=3, batch_size=1, verbose=1)\n",
+    "    classifier.fit(X_train,y_train)\n",
+    "    y_pred = classifier.predict(X_test)\n",
+    "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
+    "    print(\"Computed roc_auc score of: {}\".format(auc))\n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "    roc_auc_avg = roc_auc_avg + auc\n",
+    "    \n",
+    "    \n",
+    "    y_pred_binarized = y_pred[0:] >= .4\n",
+    "    y_test_binarized = y_test[0:] >= .4\n",
+    "    fscore = f1_score(y_pred_binarized,y_test_binarized)\n",
+    "    print(\"When using regressor as an active/inactive classifier, f1 score of: {}\".format(fscore))\n",
+    "    f1_score_avg = f1_score_avg + fscore\n",
+    "\n",
+    "    \n",
+    "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
+    "f1_score_avg = f1_score_avg / k_fold_splits\n",
+    "print(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
+    "print(\"Average f1_score is: {}\".format(f1_score_average))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "16110/16110 [==============================] - 90s - loss: 0.6471 - acc: 0.6318    \n",
+      "Epoch 2/3\n",
+      "16110/16110 [==============================] - 89s - loss: 0.5580 - acc: 0.7228    \n",
+      "Epoch 3/3\n",
+      "16110/16110 [==============================] - 91s - loss: 0.4350 - acc: 0.8060    \n",
+      "16062/16112 [============================>.] - ETA: 0sComputed roc_auc score of: 0.6903550148957299\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.68      0.73      0.70      8056\n",
+      "          1       0.71      0.65      0.68      8056\n",
+      "\n",
+      "avg / total       0.69      0.69      0.69     16112\n",
+      "\n",
+      "When using regressor as an active/inactive classifier, f1 score of: 0.6786887357506279\n",
+      "Epoch 1/3\n",
+      "15015/16112 [==========================>...] - ETA: 6s - loss: 0.6493 - acc: 0.6322"
+     ]
+    }
+   ],
    "source": [
-    "y_pred = model.predict_on_batch(X_test)\n",
-    "y_pred_binarized = y_pred[0:] > .5\n",
-    "print(classification_report(y_test, y_pred_binarized))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# What about a larger network size?\n",
+    "# What about a deep neural network?\n",
+    "# Sample code from: https://machinelearningmastery.com/tutorial-first-neural-network-python-keras/\n",
+    "\n",
+    "# What about a deep neural network?\n",
+    "# Sample code from: https://machinelearningmastery.com/tutorial-first-neural-network-python-keras/\n",
+    "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras import metrics\n",
+    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import roc_auc_score, f1_score\n",
     "\n",
-    "model = Sequential()\n",
-    "model.add(Dense(1024, input_dim=2048, activation='relu'))\n",
-    "model.add(Dense(512, activation='relu'))\n",
-    "model.add(Dense(1, activation='sigmoid'))\n",
-    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.accuracy])\n",
+    "import pickle\n",
     "\n",
-    "model.fit(X_train, y_train_, epochs=10, batch_size=1)\n",
+    "k_fold_splits = 2\n",
+    "global_random_state = 42\n",
     "\n",
-    "score = model.evaluate(X_test, y_test_binary)\n",
+    "with open('data.classification.undersampled.pickle', 'rb') as f:\n",
+    "    # Pickle the 'data' dictionary using the highest protocol available.\n",
+    "    (X, y) = pickle.load(f)\n",
     "\n",
-    "print(\"\\n Loss on test set is: {0}\".format(score))\n",
+    "def create_model() :\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(512, input_dim=2048, activation='relu'))\n",
+    "    model.add(Dense(256, activation='relu'))\n",
+    "    model.add(Dense(128, activation='relu'))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[\"accuracy\"])\n",
+    "    return model\n",
     "\n",
-    "# let's save it for future experimentation\n",
-    "model.save(\"pcba_1030_large_nn.h5\")"
+    "skf = StratifiedKFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
+    "\n",
+    "roc_auc_avg = 0\n",
+    "f1_score_avg = 0\n",
+    "\n",
+    "for train_index, test_index in skf.split(X,y) :\n",
+    "\n",
+    "    X_train = X[train_index]\n",
+    "    X_test = X[test_index]\n",
+    "    y_train = y[train_index]\n",
+    "    y_test = y[test_index]\n",
+    "\n",
+    "    classifier = KerasClassifier(build_fn=create_model, epochs=3, batch_size=1, verbose=1)\n",
+    "    classifier.fit(X_train,y_train)\n",
+    "    y_pred = classifier.predict(X_test)\n",
+    "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
+    "    print(\"Computed roc_auc score of: {}\".format(auc))\n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "    roc_auc_avg = roc_auc_avg + auc\n",
+    "    \n",
+    "    \n",
+    "    y_pred_binarized = y_pred[0:] >= .4\n",
+    "    y_test_binarized = y_test[0:] >= .4\n",
+    "    fscore = f1_score(y_pred_binarized,y_test_binarized)\n",
+    "    print(\"When using regressor as an active/inactive classifier, f1 score of: {}\".format(fscore))\n",
+    "    f1_score_avg = f1_score_avg + fscore\n",
+    "\n",
+    "    \n",
+    "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
+    "f1_score_avg = f1_score_avg / k_fold_splits\n",
+    "print(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
+    "print(\"Average f1_score is: {}\".format(f1_score_average))"
    ]
   },
   {
