--- a/pubchem_regression.ipynb
+++ b/pubchem_regression.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -39,6 +39,8 @@
     "from rdkit.Chem import AllChem, rdMolDescriptors\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,36 +78,7 @@
       "Processed index: 80000\n",
       "Processed index: 90000\n",
       "Processed index: 100000\n",
-      "Processed index: 110000\n",
-      "Processed index: 120000\n",
-      "Processed index: 130000\n",
-      "Processed index: 140000\n",
-      "Processed index: 150000\n",
-      "Processed index: 160000\n",
-      "Processed index: 170000\n",
-      "Processed index: 180000\n",
-      "Processed index: 190000\n",
-      "Processed index: 200000\n",
-      "Processed index: 210000\n",
-      "Molecule failed featurization\n",
-      "218052\n",
-      "Processed index: 220000\n",
-      "Processed all, sampling\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/joe/anaconda3/envs/pubchem-sklearn/lib/python3.6/site-packages/imblearn/base.py:100: UserWarning: Only one class detected, something will get wrong\n",
-      "  warnings.warn('Only one class detected, something will get wrong')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed all, pickling\n"
+      "Processed index: 110000\n"
      ]
     }
    ],
@@ -128,7 +101,6 @@
     "# Normalize pubchem activity score to 0...1\n",
     "full_df[\"PUBCHEM_ACTIVITY_SCORE\"] = full_df[\"PUBCHEM_ACTIVITY_SCORE\"] / 100\n",
     "\n",
-    "# Delete CID 3246048, which fails featurization\n",
     "\n",
     "compound_ids = list()\n",
     "smiles_list = list()\n",
@@ -165,17 +137,11 @@
     "\n",
     "# Convert activities to np array of ints\n",
     "\n",
-    "activities = np.array(activities,dtype=int)\n",
-    "fingerprints = np.array(fingerprints)\n",
+    "X = np.array(fingerprints)\n",
+    "y = np.array(activities,dtype=float)\n",
     "\n",
-    "print(\"Processed all, sampling\")\n",
-    "\n",
-    "rus = RandomUnderSampler(random_state=global_random_state)\n",
-    "X, y = rus.fit_sample(fingerprints, activities)\n",
-    "\n",
-    "print(\"Processed all, pickling\")\n",
-    "\n",
-    "#compound_ids_and_features = (compound_ids, smiles_list, fingerprints, activities)\n",
+    "print(X[0:10])\n",
+    "print(y[0:10])\n",
     "\n",
     "# Pickle the data to save time in the future\n",
     "with open('data.regression.undersampled.pickle', 'wb') as f:\n",
@@ -184,29 +150,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully loaded 220364 compounds.\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "      False       1.00      1.00      1.00    220364\n",
-      "\n",
-      "avg / total       1.00      1.00      1.00    220364\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.cross_validation import cross_val_predict\n",
     "import pickle\n",
@@ -231,20 +183,49 @@
     "# Print the number of compounds loaded\n",
     "print(\"Successfully loaded {0} compounds.\".format(len(X)))\n",
     "\n",
+    "#print(X.shape)\n",
+    "#print(y.shape)\n",
+    "\n",
+    "#X = np.reshape(X,(len(X),))\n",
+    "#y = np.reshape(y,(len(y),))\n",
     "\n",
     "# Create a train/test split\n",
     "\n",
-    "classifier = DecisionTreeRegressor(random_state=global_random_state)\n",
+    "kf = KFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
     "\n",
-    "scores = cross_val_score(classifier, X, y, cv=k_fold_splits)\n",
+    "mse_avg = 0\n",
     "\n",
-    "y_pred = cross_val_predict(classifier, X, y, cv=k_fold_splits)\n",
+    "for train_index, test_index in kf.split(X,y) :\n",
     "\n",
-    "y_pred_binary = y_pred[0:] > .4\n",
+    "    X_train = X[train_index]\n",
+    "    X_test = X[test_index]\n",
+    "    y_train = y[train_index]\n",
+    "    y_test = y[test_index]\n",
+    "    \n",
+    "    print(X_train[0:10])\n",
+    "    print(y_train[0:10])\n",
     "\n",
-    "y_binarized = y[0:] > .4\n",
+    "    classifier = DecisionTreeRegressor(random_state=global_random_state)\n",
+    "    classifier.fit(X_train,y_train)\n",
+    "    y_pred = classifier.predict(X_test)\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    print(\"Computed mse score of: {}\".format(mse))\n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "    mse_avg = mse_avg + mse\n",
+    "    \n",
+    "    y_pred_binary = y_pred > .4\n",
     "\n",
-    "print(classification_report(y_binarized, y_pred_binary))\n",
+    "    print(y_pred_binary[0:100])\n",
+    "\n",
+    "    y_test_binary = y_test[0:] > .4\n",
+    "\n",
+    "    print(y_test_binary[0:100])\n",
+    "\n",
+    "    print(\"How good is it as a classifier?\")\n",
+    "    print(classification_report(y_test_binary, y_pred_binary))\n",
+    "    \n",
+    "mse_avg = mse_avg / k_fold_splits\n",
+    "print(\"Average mse score is: {}\".format(mse_avg))\n",
     "\n",
     "# Note: Unfortunately it's not directly comparable to ROC_AUC calculated in MoleculeNet at: https://arxiv.org/pdf/1703.00564.pdf \n",
     "# This is because MoleculeNet looks at a different metric (roc_auc) and also a different task (multiclass prediction across 128 bioassays simultaneously vs binary classification here)"
@@ -296,7 +277,7 @@
     "\n",
     "global_random_state = 42\n",
     "\n",
-    "with open('data.pickle', 'rb') as f:\n",
+    "with open('data.regression.undersampled.pickle', 'rb') as f:\n",
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
     "    (compound_ids, smiles_list, fingerprints, activities) = pickle.load(f)\n",
     "\n",
